setup of images folder; create mixins module; _reset.scss(button general style) billy-styles-folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/plugins.css">
+    <!-- <link rel="stylesheet" href="./styles/plugins.css"> -->
+    <script src="https://kit.fontawesome.com/a14b3ad818.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/images/house-logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <title>House renting system</title>
@@ -20,7 +21,7 @@
                         <img src="./assets/images/logo.png" alt="house logo">
                     </a>
                 </div>
-                <!-- <ul class="nav-items">
+                <ul class="nav-items">
                     <li class="nav-btn">
                         <a href="#">Home</a>
                     </li>
@@ -47,7 +48,7 @@
                     <li class="nav-btn">
                         <a href="#">Contact</a>
                     </li>
-                </ul> -->
+                </ul>
                 <div class="site-account">
                     <ul>
                         <li>
@@ -125,7 +126,20 @@
             </div>
         </section>
     </div>
+    <main>
+        <section class="container-block"></section>
+        <section class="container-block"></section>
+        <section class="container-block"></section>
+        <section class="container-block section-four site-statistics"></section>
+        <section class="container-block section-five gallery"></section>
+        <section class="container-block section-six contact"></section>
+        <section class="container-block testimonial"></section>
+        <section class="container-block availability"></section>
+        <section class="container-block blog-post"></section>
+    </main>
+    <footer>
 
+    </footer>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
