finished markup for footer

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
         <section class="container-block"></section>
         <section class="container-block"></section>
         <section class="container-block"></section>
-        <section class="container-block section-four site-statistics"></section>
+        <section class="container-block section-four site-statistics">
+            
+        </section>
         <section class="container-block section-five gallery"></section>
         <section class="container-block section-six contact"></section>
         <section class="container-block testimonial"></section>
@@ -138,7 +140,72 @@
         <section class="container-block blog-post"></section>
     </main>
     <footer>
-
+        <section class="footer-upper">
+            <div class="footer-elements">
+                <h1 class="footer-heading">About House Rent</h1>
+                <div class="photo-house-rent">
+                    <div class="photo">
+                        <img src="./assets/images/footer-logo.png" alt="">
+                    </div>
+                    <h1 class="house-rent">House Rent</h1>
+                </div>
+                <p class="heading-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eius molestiae nobis? Vero 
+                    excepturi quam pariatur molestiae velit repudiandae non, vitae hic consequuntur eum iure.
+                </p>
+                <div class="button">
+                    <button class="more">More</button>
+                </div>
+            </div>
+            <div class="footer-elements">
+                <h1 class="footer-heading">Place category</h1>
+                <ul class="footer-list">
+                    <li class="list-item">
+                        flat for rent <span><a href="#">Francis</a></span>
+                    </li>
+                    <li class="list-item">
+                        flat for rent <span><a href="#"> Collins St</a></span>
+                    </li>
+                    <li class="list-item">
+                        flat for rent <span><a href="#">Rose Ln</a></span>
+                    </li>
+                    <li class="list-item">
+                        flat for rent <span><a href="#">Cosgrave Ln</a></span>
+                    </li>
+                    <li class="list-item">
+                        flat for rent <span><a href="#">Bourke St</a></span>
+                    </li>
+                    <li class="list-item">
+                        flat for rent <span><a href="#"> Flienders Ln</a></span>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-elements">
+                <h1 class="footer-heading">Instagram Image</h1>
+                <ul class="footer-list-instagram">
+                    <li class="list-item">
+                        <img src="./assets/images/footer/instagram-one.png" alt="">
+                    </li>
+                    <li class="list-item">
+                        <img src="./assets/images/footer/instagram-two.png" alt="">
+                    </li>
+                    <li class="list-item">
+                        <img src="./assets/images/footer/instagram-three.png" alt="">
+                    </li>
+                    <li class="list-item">
+                        <img src="./assets/images/footer/instagram-four.png" alt="">
+                    </li>
+                    <li class="list-item">
+                        <img src="./assets/images/footer/instagram-five.png" alt="">
+                    </li>
+                    <li class="list-item">
+                        <img src="./assets/images/footer/instagram-six.png" alt="">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <hr>
+      <p class="copyright">Copyright &copy; 2017 HTMLguru</p>
     </footer>
     <script src="./scripts/main.js"></script>
 </body>
