finished markup for gallery and all heroes

--- a/index.html
+++ b/index.html
@@ -131,10 +131,65 @@
         <section class="container-block"></section>
         <section class="container-block"></section>
         <section class="container-block section-four site-statistics">
-            
+            <div class="background-image">
+                <div class="background-color">
+                    <ul class="statistics-list">
+                        <li class="list-item">2500 Clients</li>
+                        <li class="list-item">3055 Booking</li>
+                        <li class="list-item">50 Swimming</li>
+                        <li class="list-item">1530 Apartment</li>
+                    </ul>
+                </div>
+            </div>
         </section>
-        <section class="container-block section-five gallery"></section>
-        <section class="container-block section-six contact"></section>
+        <section class="container-block section-five gallery">
+            <ul class="photo-gallery">
+                <li class="image-list">
+                    <img src="./assets/images/photo-gallery/gallery-one.png" alt="">
+                </li>
+                <li class="image-list">
+                    <img src="./assets/images/photo-gallery/gallery-two.png" alt="">
+                </li>
+                <li class="image-list">
+                    <img src="./assets/images/photo-gallery/gallery-three.png" alt="">
+                </li>
+                <li class="image-list">
+                    <img src="./assets/images/photo-gallery/gallery-four.png" alt="">
+                </li>
+                <li class="image-list">
+                    <img src="./assets/images/photo-gallery/gallery-five.png" alt="">
+                </li>
+                <li class="image-list">
+                    <img src="./assets/images/photo-gallery/gallery-six.png" alt="">
+                </li>
+            </ul>
+            <div class="gallery-right-hand">
+                <h1 class="gallery-heading">Our Photo Gallery</h1>
+                <h3>Best of our Event portfolio Photos</h3>
+                <p class="gallery-description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente eligendi molestias nisi
+                     culpa sit hic sint, tempora asperiores. Molestiae 
+                    earum vitae dicta culpa omnis esse at quia, odio corrupti repudiandae?
+                </p>
+                <button class="all-photos">All Photos and Videos</button>
+            </div>
+        </section>
+        <section class="container-block section-six contact">
+            <div class="background-image">
+                <div class="background-color">
+                    <div class="contact-list">
+                        <p>
+                            Do you want to Rent your House <span>Call us and list your property here</span>
+                        </p>
+                        <div class="email-phone-num">
+                            <p class="phone-num"><a href="tel:+237 6 74 51 18 16">+237 6 74 51 18 16</a></p>
+                            <p class="email"><a href="mailto:"></a></p>
+                            <button type="button">Contact Us</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="container-block testimonial"></section>
         <section class="container-block availability"></section>
         <section class="container-block blog-post"></section>
