finished blog-post

--- a/index.html
+++ b/index.html
@@ -192,7 +192,53 @@
         </section>
         <section class="container-block testimonial"></section>
         <section class="container-block availability"></section>
-        <section class="container-block blog-post"></section>
+        <section class="container-block blog-post">
+            <div class="blog-holder">
+                <div class="best-places-to-visit">
+                    <div class="photo">
+                        <img src="./assets/images/blog-post/blog-one.png" alt="">
+                    </div>
+                    <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
+                    <h1>Finding best places to visit in California</h1>
+                    <ul class="social-views">
+                        <li class="list-item">
+                            <i class="fa-solid fa-eye"></i> 35
+                        </li>
+                        <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
+                        <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
+                    </ul>
+                </div>
+                <div class="best-places-to-visit">
+                    <div class="photo">
+                        <img src="./assets/images/blog-post/blog-two.png" alt="">
+                    </div>
+                    <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
+                    <h1>Finding best places to visit in California</h1>
+                    <ul class="social-views">
+                        <li class="list-item">
+                            <i class="fa-solid fa-eye"></i> 35
+                        </li>
+                        <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
+                        <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
+                    </ul>
+                </div>
+                <div class="best-places-to-visit">
+                    <div class="photo">
+                        <img src="./assets/images/blog-post/blog-three.png" alt="">
+                    </div>
+                    <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
+                    <h1>Finding best places to visit in California</h1>
+                    <ul class="social-views">
+                        <li class="list-item">
+                            <i class="fa-solid fa-eye"></i> 35
+                        </li>
+                        <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
+                        <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
+                    </ul>
+                </div>
+            </div>
+            <button type="button">Show All</button>
+        </section>
     </main>
     <footer>
         <section class="footer-upper">
