--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- <link rel="stylesheet" href="./styles/plugins.css"> -->
     <script src="https://kit.fontawesome.com/a14b3ad818.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/images/house-logo.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>House renting system</title>
 
 </head>
@@ -252,10 +252,10 @@
             <div class="background-image">
                 <div class="background-color">
                     <ul class="statistics-list">
-                        <li class="list-item">2500 Clients</li>
-                        <li class="list-item">3055 Booking</li>
-                        <li class="list-item">50 Swimming</li>
-                        <li class="list-item">1530 Apartment</li>
+                        <li class="list-item">2500 <br> Clients</li>
+                        <li class="list-item">3055 <br> Booking</li>
+                        <li class="list-item">50 <br> Swimming</li>
+                        <li class="list-item">1530 <br> Apartment</li>
                     </ul>
                 </div>
             </div>
@@ -297,11 +297,11 @@
                 <div class="background-color">
                     <div class="contact-list">
                         <p>
-                            Do you want to Rent your House <span>Call us and list your property here</span>
+                            Do you want to Rent your House  <br><span>Call us and list your property here</span>
                         </p>
                         <div class="email-phone-num">
                             <p class="phone-num"><a href="tel:+237 6 74 51 18 16">+237 6 74 51 18 16</a></p>
-                            <p class="email"><a href="mailto:"></a></p>
+                            <p class="email"><a href="mailto:company@gmail.com">company@gmail.com</a></p>
                             <button type="button">Contact Us</button>
                         </div>
                     </div>
@@ -311,48 +311,56 @@
         <section class="container-block testimonial"></section>
         <section class="container-block availability"></section>
         <section class="container-block blog-post">
+            <h1 class="banner">Our Blog Post</h1>
+            <p class="heading-description">OUR NEWS FEED</p>
             <div class="blog-holder">
                 <div class="best-places-to-visit">
                     <div class="photo">
                         <img src="./assets/images/blog-post/blog-one.png" alt="">
                     </div>
-                    <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
-                    <h1>Finding best places to visit in California</h1>
-                    <ul class="social-views">
-                        <li class="list-item">
-                            <i class="fa-solid fa-eye"></i> 35
-                        </li>
-                        <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
-                        <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
-                    </ul>
+                    <div class="h1-ul-p">
+                        <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
+                        <h1>Finding best places to visit in California</h1>
+                        <ul class="social-views">
+                            <li class="list-item">
+                                <i class="fa-solid fa-eye"></i> 35
+                            </li>
+                            <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
+                            <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="best-places-to-visit">
                     <div class="photo">
                         <img src="./assets/images/blog-post/blog-two.png" alt="">
                     </div>
-                    <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
-                    <h1>Finding best places to visit in California</h1>
-                    <ul class="social-views">
-                        <li class="list-item">
-                            <i class="fa-solid fa-eye"></i> 35
-                        </li>
-                        <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
-                        <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
-                    </ul>
+                    <div class="h1-ul-p">
+                        <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
+                        <h1>Finding best places to visit in California</h1>
+                        <ul class="social-views">
+                            <li class="list-item">
+                                <i class="fa-solid fa-eye"></i> 35
+                            </li>
+                            <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
+                            <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="best-places-to-visit">
                     <div class="photo">
                         <img src="./assets/images/blog-post/blog-three.png" alt="">
                     </div>
-                    <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
-                    <h1>Finding best places to visit in California</h1>
-                    <ul class="social-views">
-                        <li class="list-item">
-                            <i class="fa-solid fa-eye"></i> 35
-                        </li>
-                        <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
-                        <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
-                    </ul>
+                    <div class="h1-ul-p">
+                        <p class="date-and-type">July 25, 2016  <span><a href="#">Rooms & Suites</a></span></p>
+                        <h1>Finding best places to visit in California</h1>
+                        <ul class="social-views">
+                            <li class="list-item">
+                                <i class="fa-solid fa-eye"></i> 35
+                            </li>
+                            <li class="list-item"><i class="fa-regular fa-heart"></i> 9</li>
+                            <li class="list-item"><i class="fa-solid fa-message"></i> 05</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <button type="button">Show All</button>
@@ -366,11 +374,11 @@
                     <div class="photo">
                         <img src="./assets/images/footer-logo.png" alt="">
                     </div>
-                    <h1 class="house-rent">House Rent</h1>
+                    <!-- <h1 class="house-rent">House Rent</h1> -->
                 </div>
                 <p class="heading-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eius molestiae nobis? Vero 
-                    excepturi quam pariatur molestiae velit repudiandae non, vitae hic consequuntur eum iure.
+                    We Provide Premium Word Press, Ghost and HTML template. Our Perm tritium Templates is, develop gaped in a way so that the clients find Support.
+                     Themes are developed in a way so that the clients find.
                 </p>
                 <div class="button">
                     <button class="more">More</button>
@@ -380,22 +388,24 @@
                 <h1 class="footer-heading">Place category</h1>
                 <ul class="footer-list">
                     <li class="list-item">
-                        flat for rent <span><a href="#">Francis</a></span>
+                        <p>  flat for rent <span><a href="#">Francis</a></span></p>
+                      
                     </li>
                     <li class="list-item">
-                        flat for rent <span><a href="#"> Collins St</a></span>
+                        <p>  flat for rent <span><a href="#"> Collins St</a></span></p>
+                      
                     </li>
                     <li class="list-item">
-                        flat for rent <span><a href="#">Rose Ln</a></span>
+                      <p>  flat for rent <span><a href="#">Rose Ln</a></span></p>
                     </li>
                     <li class="list-item">
-                        flat for rent <span><a href="#">Cosgrave Ln</a></span>
+                        <p>flat for rent <span><a href="#">Cosgrave Ln</a></span></p>
                     </li>
                     <li class="list-item">
-                        flat for rent <span><a href="#">Bourke St</a></span>
+                       <p> flat for rent <span><a href="#">Bourke St</a></span></p>
                     </li>
                     <li class="list-item">
-                        flat for rent <span><a href="#"> Flienders Ln</a></span>
+                     <p>   flat for rent <span><a href="#"> Flienders Ln</a></span></p>
                     </li>
                 </ul>
             </div>
@@ -424,7 +434,7 @@
             </div>
         </section>
         <hr>
-      <p class="copyright">Copyright &copy; 2017 HTMLguru</p>
+      <p class="copyright">Copyright &copy; 2017 <span>HTMLguru</span> </p>
     </footer>
     <script src="./scripts/main.js"></script>
 </body>
