--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <main>
         <section class="container-block"></section>
         <section class="container-block"></section>
-        <section class="container-block"></section>
+        <section class="container-block rooms-and-appartments"></section>
         <section class="container-block section-four site-statistics">
             <div class="background-image">
                 <div class="background-color">
