done with rooms and apparts

--- a/index.html
+++ b/index.html
@@ -361,8 +361,213 @@
             </div>
         </section>
 
-        <section class="section-five"></section>
-
+        <section class="rooms-and-appartments">
+            <div class="banner-and-description">
+                <h1 class="banner section-header">Rooms & Apartments</h1>
+                <p class="description">FIND YOUR ROOMS, FOR YOUR ABAILITY</p>
+            </div>
+            <div class="family-appartment list">
+                <div class="list-item">
+                    <div class="appartment-photo">
+                        <img src="./assets/images/rooms-and-appartments/apartment-one.png" alt="">
+                    </div>
+                    <div class="below-wrapper">
+                        <div class="upper-wrapper">
+                            <h1 class="family-heading">Family Apartment</h1>
+                            <p class="heading-description">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Dhanmondi, Dhaka</span>
+                            </p>
+                        </div>
+                        <div class="down-wrapper">
+                            <div class="two-para">
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bed"></i>
+                                    <span> 3 Bedrooms</span>
+                                </p>
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bath"></i>
+                                    <span> 2 Bathroom</span>
+                                </p>
+                            </div>
+                            <div class="h1-and-icons">
+                                <h1>&dollar;200</h1>
+                                <p class="icons">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <div class="appartment-photo">
+                        <img src="./assets/images/rooms-and-appartments/apartment-two.png" alt="">
+                    </div>
+                    <div class="below-wrapper">
+                        <div class="upper-wrapper">
+                            <h1 class="family-heading">Family Apartment</h1>
+                            <p class="heading-description">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Dhanmondi, Dhaka</span>
+                            </p>
+                        </div>
+                        <div class="down-wrapper">
+                            <div class="two-para">
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bed"></i>
+                                    <span> 3 Bedrooms</span>
+                                </p>
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bath"></i>
+                                    <span> 2 Bathroom</span>
+                                </p>
+                            </div>
+                            <div class="h1-and-icons">
+                                <h1>&dollar;200</h1>
+                                <p class="icons">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <div class="appartment-photo">
+                        <img src="./assets/images/rooms-and-appartments/apartment-three.png" alt="">
+                    </div>
+                    <div class="below-wrapper">
+                        <div class="upper-wrapper">
+                            <h1 class="family-heading">Family Apartment</h1>
+                            <p class="heading-description">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Dhanmondi, Dhaka</span>
+                            </p>
+                        </div>
+                        <div class="down-wrapper">
+                            <div class="two-para">
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bed"></i>
+                                    <span> 3 Bedrooms</span>
+                                </p>
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bath"></i>
+                                    <span> 2 Bathroom</span>
+                                </p>
+                            </div>
+                            <div class="h1-and-icons">
+                                <h1>&dollar;200</h1>
+                                <p class="icons">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <div class="appartment-photo">
+                        <img src="./assets/images/rooms-and-appartments/apartment-four.png" alt="">
+                    </div>
+                    <div class="below-wrapper">
+                        <div class="upper-wrapper">
+                            <h1 class="family-heading">Family Apartment</h1>
+                            <p class="heading-description">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Dhanmondi, Dhaka</span>
+                            </p>
+                        </div>
+                        <div class="down-wrapper">
+                            <div class="two-para">
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bed"></i>
+                                    <span> 3 Bedrooms</span>
+                                </p>
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bath"></i>
+                                    <span> 2 Bathroom</span>
+                                </p>
+                            </div>
+                            <div class="h1-and-icons">
+                                <h1>&dollar;200</h1>
+                                <p class="icons">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <div class="appartment-photo">
+                        <img src="./assets/images/rooms-and-appartments/apartment-five.png" alt="">
+                    </div>
+                    <div class="below-wrapper">
+                        <div class="upper-wrapper">
+                            <h1 class="family-heading">Family Apartment</h1>
+                            <p class="heading-description">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Dhanmondi, Dhaka</span>
+                            </p>
+                        </div>
+                        <div class="down-wrapper">
+                            <div class="two-para">
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bed"></i>
+                                    <span> 3 Bedrooms</span>
+                                </p>
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bath"></i>
+                                    <span> 2 Bathroom</span>
+                                </p>
+                            </div>
+                            <div class="h1-and-icons">
+                                <h1>&dollar;200</h1>
+                                <p class="icons">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-item">
+                    <div class="appartment-photo">
+                        <img src="./assets/images/rooms-and-appartments/apartment-six.png" alt="">
+                    </div>
+                    <div class="below-wrapper">
+                        <div class="upper-wrapper">
+                            <h1 class="family-heading">Family Apartment</h1>
+                            <p class="heading-description">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Dhanmondi, Dhaka</span>
+                            </p>
+                        </div>
+                        <div class="down-wrapper">
+                            <div class="two-para">
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bed"></i>
+                                    <span> 3 Bedrooms</span>
+                                </p>
+                                <p class="bedrooms">
+                                    <i class="fa-solid fa-bath"></i>
+                                    <span> 2 Bathroom</span>
+                                </p>
+                            </div>
+                            <div class="h1-and-icons">
+                                <h1>&dollar;200</h1>
+                                <p class="icons">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- 
         <section class="section-six counter-section">
             <div class="section-counter-wrapper flex-container">
                 <div class="clients">
@@ -382,9 +587,9 @@
                     <div>apartment</div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <footer>
+        <!-- <footer>
             <div class="footer-container">
                 <div class="footer-wrapper flex-container">
                     <div class="footer-item-top flex-container">
@@ -427,7 +632,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </div>
     <main>
         <section class="container-block"></section>
